--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+/* .header-container {
+  margin: 15px;
+  background-color: yellow;
+  border-width: 2px;
+  border-color: black;
+  border-style: solid;
 }
+.card-container {
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  border-width: 3px;
+  border-color: black;
+  border-style: solid;
+} */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: #c0ffee;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App{
+  margin: 1em;
+  font-family: "Avenir", "Arial", sans-serif;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.list {
+  list-style:none;
+}
+.list-item {
+  padding:1em;
   display: flex;
-  flex-direction: column;
+  flex: 1;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: 0.25cm solid #cacaca;
+  margin-bottom: 1cm;
+}
+.list-item-image-container{
+  flex: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.list-item-image-container > img{
+  height: 4cm;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list-item-name {
+  flex: 3;
+}
+.list-item-power {
+  font-weight: bolder;
+  color: #ff0000;
 }
